[project]
name = "docbase-mcp"
version = "0.1.0"
description = "MCP server that wraps the DocBase CLI with access-token authentication."
readme = "README.md"
authors = [
    { name = "makoto kozono", email = "oceandepthz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
docbase-mcp = "docbase_mcp:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
